--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">HeadViews</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">HeadViews</string>
     <string name="title_home">EditTextView</string>
     <string name="title_dashboard">HeadButton</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Spinner</string>
 </resources>
