--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_home">EditTextView</string>
     <string name="title_dashboard">HeadButton</string>
     <string name="title_notifications">Spinner</string>
+    <string name="title_title">Title</string>
 </resources>
